Optimize imports